# CLIProgressbar

./: CMakeLists.txt  Makefile  README.md  make_clean.sh  make_demo.sh  make_swig.sh
Demo/: .gitignore  CMakeLists.txt  demo.c  demo.py
Progressbar/: CMakeLists.txt  defs.h  progressbar.c  progressbar.h
pyprogressbar/: .gitignore  Makefile  progressbar.i
